# RegistrationHelpers

./: CMakeLists.txt
Data/Fiducials/Case10/: MR-fiducials.fcsv  US-fiducials.fcsv
GaussianSmoothing/: CMakeLists.txt  GaussianSmoothing.cxx  GaussianSmoothing.xml
Scripts/: Register.py  RegisterAffineBspline.py  SegmentationPostProcess.py  SegmentationPostProcessSmooth.py  getErrors.py
SurfaceToBinaryImage/: CMakeLists.txt  SurfaceToBinaryImage.cxx  SurfaceToBinaryImage.xml
TransformFiducialList/: CMakeLists.txt  ReadFiducials.cxx  TransformFiducialList.cxx  TransformFiducialList.xml
